--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
       <p>R$ 139,99</p>
       <button onclick="event.stopPropagation(); adicionarCarrinho(4)">Adicionar ao carrinho</button>
     </div>
-    <div class="item" onclick="abrirDetalhes(5)">
-      <img src="uniformes/garra.png" alt="Camisa">
-      <h2>Garra Do Lobo Team Wolf SS25 Futevôlei- preto/branco</h2>
-      <p>R$ 139,99</p>
-      <button onclick="event.stopPropagation(); adicionarCarrinho(5)">Adicionar ao carrinho</button>
-    </div>
     <div class="item" onclick="abrirDetalhes(6)">
       <img src="uniformes/aluno1.png" alt="Camisa">
       <h2>Calção Team Wolf SS25 Futevôlei feminino- preto/branco</h2>
       <p>R$ 69,99</p>
       <button onclick="event.stopPropagation(); adicionarCarrinho(6)">Adicionar ao carrinho</button>
     </div>
+    <div class="item" onclick="abrirDetalhes(5)">
+      <img src="uniformes/garra.png" alt="Camisa">
+      <h2>Garra Do Lobo Team Wolf SS25 Futevôlei- preto/branco</h2>
+      <p>R$ 139,99</p>
+      <button onclick="event.stopPropagation(); adicionarCarrinho(5)">Adicionar ao carrinho</button>
+    </div>
+  </main>
   </main>
 
   <div class="carrinho-flutuante" id="carrinho">
